styles/inline.css
/* ... */
.weather-forecast .icon.cloudy {
    background-image: url("/images/cloudy.png");
}

.weather-forecast .icon.partly-cloudy-day {
    background-image: url("/images/partly-cloudy.png");
}

.weather-forecast .icon.partly-cloudy-night {
    background-image: url("/images/partly-cloudy.png");
}

.weather-forecast .icon.thunderstorms {
    background-image: url("/images/thunderstorms.png");
}

@media (max-width: 450px) {
    .weather-forecast .date, .weather-forecast .description {
        font-size: 0.9em;
    }

    .weather-forecast .current .icon {
        width: 96px;
        height: 96px;
    }

    .weather-forecast .current .visual {
        font-size: 3em;
    }

    .weather-forecast .future .oneday .icon {
        width: 32px;
        height: 32px;
    }
}

.mdl-button {
    background: transparent;
    border: none;
    border-radius: 2px;
    color: black;
    position: relative;
    height: 36px;
    margin: 0;
    min-width: 64px;
    padding: 0 16px;
    display: inline-block;
    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
    font-size: 14px;
    font-weight: 500;
    text-transform: uppercase;
    line-height: 1;
    letter-spacing: 0;
    overflow: hidden;
    will-change: box-shadow;
    -webkit-transition: box-shadow 0.2s cubic-bezier(0.4, 0, 1, 1), background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1), color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
    transition: box-shadow 0.2s cubic-bezier(0.4, 0, 1, 1), background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1), color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
    outline: none;
    cursor: pointer;
    text-decoration: none;
    text-align: center;
    line-height: 36px;
    vertical-align: middle;
}

.mdl-button::-moz-focus-inner {
    border: 0;
}

.mdl-button:hover {
    background-color: rgba(158, 158, 158, 0.2);
}

.mdl-button:focus:not(:active) {
    background-color: rgba(0, 0, 0, 0.12);
}

.mdl-button:active {
    background-color: rgba(158, 158, 158, 0.4);
}

.mdl-button.mdl-button--colored {
    color: #3f51b5;
}

.mdl-button.mdl-button--colored:focus:not(:active) {
    background-color: rgba(0, 0, 0, 0.12);
}

.mdl-button--primary.mdl-button--primary {
    color: #3f51b5;
}

.mdl-button--primary.mdl-button--primary .mdl-ripple {
    background: white;
}

.mdl-button--primary.mdl-button--primary.mdl-button--raised, .mdl-button--primary.mdl-button--primary.mdl-button--fab {
    color: white;
    background-color: #3f51b5;
}

.reports-list md-grid-list {
    margin: 8px;
}

.reports-list md-grid-tile p {
    transform: translateY(-20%);
    -webkit-transform: translateY(-20%);
    -moz-transform: translateY(-20%);
    margin: 10px;
    font-weight: bold;
}

.reports-list md-grid-tile {
    transition: all 400ms ease-out 50ms;
}

.lost-card {
    background-color: #326BAB;
}

.alert-card {
    background-color: #C33E38;
}

.warning-card {
    background-color: #E5B340;
}

.message-card {
    background-color: #3F9848;
}

.add-report-button-row {
    margin: 0 auto;
}

.add-report-button-row p {
    z-index: 3;
    position: absolute;
    top: 100px;
    width: 100%;
    text-align: center;
}

.add-report-button-row img {
    z-index: 3;
    position: absolute;
    top: 27px;
    width: 90px;
    height: 90px;
    text-align: center;
    margin: 0 auto;
    left: 27px;
}

.add-report-button-row div {
    width: 150px;
    height: 150px;
    display: block;
    position: relative;
    margin: 4px;
    color: white;
}

.main-add-fab {
    position: fixed !important;
    bottom: 16px !important;
    right: 16px !important;
}

.main-add-fab-log-in {
    position: fixed !important;
    bottom: 72px !important;
    right: 16px !important;
}

#logoutButton,
#loginButton {
    font-weight: bold;
    color: white;
    background-color: transparent;
    border: none;
    margin-bottom: 20px;
}

#report-description {
    transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
}

.main-login-title {
    text-align: center;
}

#here-logo {
    width: 100%;
    padding: 16px 16px 0 16px;
}

.md-dialog-container {
    z-index: 999999 !important;
}

.tile-blur img {
    -webkit-filter: brightness(50%);
    filter: brightness(50%);
    overflow: hidden;
    text-align: center;
    color: white;
    width: 100%;
    height: 100%;
    position: absolute;
}

.tile-blur #report-description {
    color: white;
}

.center-loading-container{
    position: relative;
    transform: translateY(100%);
    text-align: center;
}

.center-loading-container md-progress-circular{
    margin: 0 auto;
    text-align: center;
}

